--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --bg: #e7f5ef;
+  --bg-dark: #B2C2BB;
+  --text: #2F524B;
+  --red: #B73534
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: var(--bg-dark);
+  font-size: 20px;
+  font-family: monospace;
+  color: var(--text)
+}
+
+input[type="text"],
+input[type="number"] {
+  font-size: 20px;
+/*   background-color: rgba(255, 255, 255, 0);
+  border: 1px solid var(--text) */
+}
+
+form * {
+  display: block;
+}
+
+label * {
+  display: block;
+}
+
+.project-name {
+  font-weight: bold
+}
+
+.red {
+  color: var(--red)
+}
+
+.project {
+  padding: 2rem;
+  border: 1px dotted var(--text)
+}
+
+input {
+  margin-bottom: 2rem;
 }
