--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,64 @@
 :root {
-  --bg: #e7f5ef;
-  --bg-dark: #B2C2BB;
-  --text: #2F524B;
-  --red: #B73534
+  --bg: #fff;
+  --bg-dark: #888;
+  --text: #000;
+  --critical: #b00;
+  --border: 3px solid var(--text);
 }
 
 body {
-  background-color: var(--bg-dark);
+  background-color: var(--bg);
   font-size: 20px;
-  font-family: monospace;
   color: var(--text)
+}
+
+body * {
+  font-family: monospace;
+  /* font-family: 'MD IO 0.4', Menlo, monospace */
+  /* font-family: 'IBM Plex Mono', Menlo, monospace */
+}
+
+hr {
+  border: 1.5px solid var(--text)
+}
+
+label {
+ 
+}
+input:focus{
+  outline: none;
 }
 
 input[type="text"],
 input[type="number"] {
+  padding: 0.5em;
   font-size: 20px;
-/*   background-color: rgba(255, 255, 255, 0);
-  border: 1px solid var(--text) */
+  border: var(--border);
+  background-color: transparent;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus {
+  background-color: var(--bg)
+}
+
+button {
+  padding: 1em;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: var(--border);
+  background-color: transparent;
+  /* letter-spacing: 1px; */
+}
+button:hover {
+  background-color: var(--text); 
+  color: var(--bg)
+}
+
+button.critical:hover {
+  border: 3px solid var(--critical);
+  background-color: var(--critical)
 }
 
 form * {
@@ -27,17 +69,36 @@ label * {
   display: block;
 }
 
+.debug {
+  font-size: 11px;
+  display: none;
+}
+
 .project-name {
   font-weight: bold
 }
 
 .red {
-  color: var(--red)
+  color: var(--critical)
+}
+
+
+.month {
+  max-width: 40rem;
+  margin: auto
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  
 }
 
 .project {
   padding: 2rem;
-  border: 1px dotted var(--text)
+  border: var(--border);
 }
 
 input {
